--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "lodash": "~2.2.0",
     "xmldom": "~0.1.16",
-    "optimist": "~0.3.5"
+    "optimist": "~0.3.5",
+    "concat-stream": "~1.0.1"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
