--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash": "~2.2.0",
     "xmldom": "~0.1.16",
     "optimist": "~0.3.5",
-    "concat-stream": "~1.0.1"
+    "concat-stream": "~1.0.1",
+    "htmlparser2": "~3.0.5"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
