--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/tyrasd/osmtogeojson/issues"
   },
   "dependencies": {
+    "geojson-rewind": "0.1.0",
     "lodash": "~2.2.0",
     "xmldom": "~0.1.16",
     "optimist": "~0.3.5",
