--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osmtogeojson",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "convert OSM to geojson",
   "main": "index.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "xmldom": "~0.1.16",
     "optimist": "~0.3.5",
     "concat-stream": "~1.0.1",
-    "htmlparser2": "~3.0.5"
+    "htmlparser2": "3.5.1"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
