--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "convert OSM to geojson",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec"
+    "pretest": "npm ls --depth=Infinity > /dev/null",
+    "test": "npm run test-lib && npm run test-cli",
+    "test-lib": "mocha -R spec",
+    "test-cli": "node test-cli/cli.test.js | faucet"
   },
   "bin": {
     "osmtogeojson": "osmtogeojson"
@@ -32,7 +35,9 @@
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "tape": "~2.10.2",
+    "faucet": "~0.0.1"
   },
   "engines": {
     "node": ">=0.5"
