--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osmtogeojson",
-  "version": "2.2.8",
+  "version": "2.2.9",
   "description": "convert OSM to geojson",
   "main": "index.js",
   "scripts": {
@@ -26,13 +26,14 @@
     "url": "https://github.com/tyrasd/osmtogeojson/issues"
   },
   "dependencies": {
-    "geojson-rewind": "0.1.0",
-    "geojson-numeric": "0.2.0",
-    "xmldom": "~0.1.16",
-    "optimist": "~0.3.5",
+    "JSONStream": "0.8.0",
     "concat-stream": "~1.0.1",
+    "geojson-numeric": "0.2.0",
+    "geojson-rewind": "0.1.0",
     "htmlparser2": "3.5.1",
-    "JSONStream": "0.8.0"
+    "optimist": "~0.3.5",
+    "osm-polygon-features": "^0.9.1",
+    "xmldom": "~0.1.16"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
