indicate 3.0.0-development status in version fields

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "osmtogeojson",
   "main": "osmtogeojson.js",
-  "version": "2.2.11",
+  "version": "3.0.0-dev",
   "homepage": "http://tyrasd.github.io/osmtogeojson",
   "authors": [
     "Martin Raifer"
