--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "htmlparser2": "3.5.1",
     "optimist": "~0.3.5",
     "osm-polygon-features": "^0.9.1",
+    "tiny-osmpbf": "^0.1.0",
     "xmldom": "~0.1.16"
   },
   "devDependencies": {
