--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osmtogeojson",
-  "version": "3.0.0-dev",
+  "version": "3.0.0-beta.0",
   "description": "convert OSM to geojson",
   "main": "index.js",
   "scripts": {
