--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "~1.12.0",
     "tape": "~2.10.2",
     "faucet": "~0.0.1"
