--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
+    "faucet": "~0.0.1",
     "istanbul": "^0.4.5",
     "mocha": "~1.12.0",
     "tape": "~2.10.2",
-    "faucet": "~0.0.1"
+    "tinyify": "^2.5.0"
   },
   "engines": {
     "node": ">=0.5"
