--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 sudo: false
 language: node_js
 node_js:
-  - "iojs"
-  - "4.1"
-  - "4.0"
-  - "0.12"
-  - "0.10"
+  - node 
 # whitelist
 branches:
   only:
