--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osmtogeojson",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0-beta.4",
   "description": "convert OSM to geojson",
   "main": "index.js",
   "types": "index.d.ts",
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "JSONStream": "0.8.0",
-    "concat-stream": "~1.0.1",
-    "geojson-numeric": "0.2.0",
-    "geojson-rewind": "0.3.0",
+    "concat-stream": "2.0.0",
+    "geojson-numeric": "0.2.1",
+    "@mapbox/geojson-rewind": "0.4.0",
     "htmlparser2": "3.5.1",
     "optimist": "~0.3.5",
     "osm-polygon-features": "^0.9.1",
