Change link to HTTPS

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "osmtogeojson",
   "main": "osmtogeojson.js",
   "version": "3.0.0-dev",
-  "homepage": "http://tyrasd.github.io/osmtogeojson",
+  "homepage": "https://tyrasd.github.io/osmtogeojson/",
   "authors": [
     "Martin Raifer"
   ],
